--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -95,10 +95,13 @@ nav ul {
     margin-bottom: 30px;
     font-weight: 700;
     font-size: 35px;
+    text-align: center;
+    
 }
 main{
     max-width: 1140px;
     margin:0 auto ;
+    
 }
 .about{
     text-align: center;
@@ -116,4 +119,38 @@ main{
 .about-container{
     display: flex;
     justify-content:space-around;
+}
+.about-title{
+    color: #757575;
+}
+.about-description{
+    color: #474747;
+    font-weight: 700;
+    font-size: 20px;
+}
+.what-i-do{
+    margin-top: 130px;
+    margin-bottom:30px ;
+    
+}
+.skill-container{
+    display: flex;
+    gap:24px ;
+}
+.skill-title{
+    font-weight: 700;
+    font-size: 20px;
+    margin-bottom:20px;
+    margin-top: 30px;
+}
+.skill-description{
+    font-weight: 400;
+    font-size: 16px;
+    color: #757575;
+}
+.skill{
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
 }
