--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -38,8 +38,8 @@ nav ul {
 
 .button {
     background: #FD6E0A;
-    height: 65px;
     color: white;
+    height: 65px;
     font-weight: 700;
     font-size: 20px;
     border-radius: 5px;
@@ -133,6 +133,14 @@ main{
     margin-bottom:30px ;
     
 }
+.what-i-do-description{
+    margin-top:52px ;
+    margin-bottom:18px ;
+    text-align: center;
+    color: #757575;
+    font-weight: 400;
+    font-size: 18px;
+}
 .skill-container{
     display: flex;
     gap:24px ;
@@ -197,4 +205,42 @@ main{
 .resume-button{
     margin-top:50px ;
     text-align: center;
+    margin-bottom: 113px;
+}
+.contact{
+    display: flex;
+    gap: 117px;
+    background-color:#FFF8F3 ;
+    padding: 120px 230px;
+}
+.contact-description{
+    color: #474747;
+    font-weight: 400;
+    font-size: 16px;
+    margin-bottom:30px ;
+}
+.contact-title{
+    font-weight: 700;
+    font-size: 35px;
+    text-align: left;
+    margin-bottom: 25px;
+}
+.form-box{
+    margin-bottom: 24px;
+    color:#FFFFFF ;
+    border: 0px;
+    height:64px ;
+    width:100% ;
+    padding: 18px 30px;
+}
+.form-text{
+    color: #FFFFFF;
+    border: 0px;
+    width: 100%;
+    height: 180px;
+    padding: 18px 30px;
+    margin-bottom: 28px;
+}
+.contact a{
+    text-decoration: none;
 }
