--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -22,7 +22,7 @@
 nav {
     display: flex;
     justify-content: space-between;
-    margin: 60px 150px;
+    padding: 60px 150px;
 }
 
 nav li {
@@ -232,6 +232,8 @@ main{
     height:64px ;
     width:100% ;
     padding: 18px 30px;
+    font-weight: 400;
+    font-size: 16px;
 }
 .form-text{
     color: #FFFFFF;
@@ -240,6 +242,8 @@ main{
     height: 180px;
     padding: 18px 30px;
     margin-bottom: 28px;
+    font-weight: 400;
+    font-size: 16px;
 }
 .contact a{
     text-decoration: none;
